Fix spacing in Funds activity

--- a/src/scss/_funds_activity.scss
+++ b/src/scss/_funds_activity.scss
@@ -38,7 +38,7 @@
         &__container {
             display: flex;
             align-items: center;
-            min-width: 180px;
+            min-width: 230px;
 
             .address {
                 font-size: 18px;
